fixed layout of featured products on mobile

--- a/src/components/Featured/OfferGroup/OfferGroup.module.scss
+++ b/src/components/Featured/OfferGroup/OfferGroup.module.scss
@@ -4,14 +4,14 @@
 
 .offer_grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr auto;
   justify-content: center;
   gap: 1em;
 
   .first {
-    grid-column: 1 / 4;
-    grid-row: 1 / 3;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
     align-self: center;
   }
 
@@ -22,7 +22,7 @@
     a {
       display: flex;
       flex-direction: column;
-      flex: 1 1 100%;
+      flex-grow: 1;
     }
   }
 }
