--- a/src/components/Featured/OfferGroup/Product/Product.module.scss
+++ b/src/components/Featured/OfferGroup/Product/Product.module.scss
@@ -30,7 +30,7 @@
     }
     
     @media (max-width: $sm) {
-      height: 5em;
+      height: 15em;
     }
   }
 
